--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -1,22 +1,15 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello DefaultController!{% endblock %}
+{% block title %}Hello HomeController!
+{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
 
-<div class="example-wrapper">
-    <h1>Testons la Securité en 6.1 ✅</h1>
+	<!-- bloc des commerces -->
+	{% include 'blocks/block_home_shops.html.twig' with {'activityTypes': activitytypes} %}
 
-    Les routes :
+	<!-- bloc serviceks -->
+	{% include 'blocks/block_home_services.html.twig' %}
 
-    <ul>
-        <h3><li> <a href="{{ path('app_register') }}">Enregistrement</a></li></h3>
-        <h3><li><a href="{{ path('app_login') }}">Connexion </a></li></h3>
-    </li>
-    </ul>
-</div>
+
 {% endblock %}
