--- a/templates/menus/navigation_user.html.twig
+++ b/templates/menus/navigation_user.html.twig
@@ -24,7 +24,7 @@
 					{%if  app.user%}
 						<li class="nav-item">
 							<a class="nav-link" href="#">Bonjour
-								{{app.user.firstname  }}
+								{{app.user.email }}
 							</a>
 						</li>
 
