--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,19 +1,21 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Register{% endblock %}
+{% block title %}Register
+{% endblock %}
 
 {% block body %}
-    <h1>Register</h1>
+	<h1>Register</h1>
 
-    {{ form_errors(registrationForm) }}
+	{{ form_errors(registrationForm) }}
 
-    {{ form_start(registrationForm) }}
-        {{ form_row(registrationForm.email) }}
-        {{ form_row(registrationForm.plainPassword, {
-            label: 'Password'
-        }) }}
-        {{ form_row(registrationForm.agreeTerms) }}
+	{{ form_start(registrationForm) }}
+	{{form_row(registrationForm.lastname)}}
+	{{form_row(registrationForm.firstname)}}
+	{{ form_row(registrationForm.email) }}
+	{{form_row(registrationForm.phone)}}
+	{{ form_row(registrationForm.plainPassword) }}
+	{{form_row(registrationForm.confirmpassword)}}
 
-        <button type="submit" class="btn">Enregistrer</button>
-    {{ form_end(registrationForm) }}
+	<button type="submit" class="btn">Enregistrer</button>
+	{{ form_end(registrationForm) }}
 {% endblock %}
