--- a/templates/user/_form.html.twig
+++ b/templates/user/_form.html.twig
@@ -1,4 +1,13 @@
 {{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Enregistrer') }}</button>
+
+
+{{form_row(form.lastname)}}
+{{form_row(form.firstname)}}
+{{form_row(form.email)}}
+{{form_row(form.phone)}}
+{{form_row(form.password)}}
+{{form_row(form.confirmpassword)}}
+
+
+<button class="btn">{{ button_label|default('Enregistrer') }}</button>
 {{ form_end(form) }}
