--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -1,40 +1,52 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}User index{% endblock %}
+{% block title %}User index
+{% endblock %}
 
 {% block body %}
-    <h1>User index</h1>
+	<h1 class="text-center">User index</h1>
 
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Email</th>
-                <th>Roles</th>
-                <th>Password</th>
-                <th>actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for user in users %}
-            <tr>
-                <td>{{ user.id }}</td>
-                <td>{{ user.email }}</td>
-                <td>{{ user.roles ? user.roles|json_encode : '' }}</td>
-                <td>{{ user.password }}</td>
-                <td>
-                    <a href="{{ path('app_user_show', {'id': user.id}) }}">afficher</a>
-                    <a href="{{ path('app_user_edit', {'id': user.id}) }}">editer</a>
-                </td>
-                
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="5">pas d'enregistrement</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+	<table class="table text-center">
+		<thead>
+			<tr>
+				<th>Id</th>
+				<th>Lastname</th>
+				<th>Firstname</th>
+				<th>Email</th>
+				<th>Phone</th>
+				<th>Roles</th>
+				<th>Détails</th>
+				<th>Modifier</th>
+			</tr>
+		</thead>
+		<tbody>
+			{% for user in users %}
+				<tr>
+					<td>{{ user.id }}</td>
+					<td>{{ user.lastname }}</td>
+					<td>{{ user.firstname }}</td>
+					<td>{{ user.email }}</td>
+					<td>{{ user.phone }}</td>
+					<td>{{ user.roles ? user.roles|json_encode : '' }}</td>
+					<td>
+						<a href="{{ path('app_user_show', {'id': user.id}) }}">détails
+							{{user.lastname }}
+							{{user.firstname}}</a>
+					</td>
+					<td>
+						<a href="{{ path('app_user_edit', {'id': user.id}) }}">modifier
+							{{user.lastname}}
+							{{user.firstname}}
+						</a>
+					</td>
+				</tr>
+			{% else %}
+				<tr>
+					<td colspan="9">no records found</td>
+				</tr>
+			{% endfor %}
+		</tbody>
+	</table>
 
-    <a href="{{ path('app_user_new') }}">Creer un utilisateur</a>
+	<a href="{{ path('app_user_new') }}">Create new</a>
 {% endblock %}
