réussite de l'affichage des activitytypes avec un lien qui mène vers la liste des traders de cette actyvitytype

--- a/templates/blocks/block_home_shops.html.twig
+++ b/templates/blocks/block_home_shops.html.twig
@@ -23,7 +23,7 @@
 							<div class="portfolio-caption">
 								<div class="portfolio-caption-heading">
 									<h3>
-										<a href="#">{{shop.title}}</a>
+										<a href="{{path('app_trader_activitytype', {'id': shop.id })}}">{{shop.title}}</a>
 									</h3>
 								</div>
 							</div>
