--- a/templates/menus/navigation_admin.html.twig
+++ b/templates/menus/navigation_admin.html.twig
@@ -11,6 +11,12 @@
 					<a class="nav-link" href="{{path('app_home')}}">Accueil</a>
 				</li>
 
+
+				<li class="nav-item">
+					<a class="nav-link" href="#">Admin</a>
+				</li>
+
+
 				{%if not app.user%}
 					<li class="nav-item">
 						<a class="nav-link" href="{{path('app_login')}}">Se connecter</a>
