modification du titre principal pour la page traderlist en ajoutant l'activitytype directement

--- a/templates/blocks/block_home_shops.html.twig
+++ b/templates/blocks/block_home_shops.html.twig
@@ -2,7 +2,8 @@
 <section class="page-section bg-light" id="portfolio">
 	<div class="container">
 		<div class="text-center">
-			<h2 class="section-heading text-uppercase">Les commerces</h2>
+
+			<h2 class="section-heading text-uppercase">Vos commerces</h2>
 		</div>
 		<div class="row">
 			{%for shop in activitytypes %}
@@ -29,6 +30,4 @@
 							</div>
 						</div>
 					</div>
-					{%endfor%}
-
-				</section>
+					{%endfor%}</section>
