--- a/templates/trader/traderlist.html.twig
+++ b/templates/trader/traderlist.html.twig
@@ -11,7 +11,9 @@
 	<section class="page-section bg-light" id="portfolio">
 		<div class="container">
 			<div class="text-center">
-				<h2 class="section-heading text-uppercase mb-5">Vos Artisans</h2>
+
+
+				<h2 class="section-heading text-uppercase mb-5">vos {{activitytypes.title}}</h2>
 			</div>
 			<div class="row">
 				{%for trader in traders %}
