amélioration du design ajout d'un alt pour les images de la page d'accueil et un titre h1 dans le header

--- a/templates/blocks/block_home_introduction.html.twig
+++ b/templates/blocks/block_home_introduction.html.twig
@@ -6,7 +6,7 @@
 
 <div class="text-center col-md-6 offset-md-3">
 	<p>
-		Vous aimez bien manger, acheter des produits de qualité fabriqués par des artisans passionnés, faire vivre le terroir ? Ça tombe bien, nous aussi ! Artisan Halles est une plateforme de vente pour tous les artisans du domaine alimentaire. En un clic, vous pourrez retrouver le commerçant de votre village ou de votre quartier afin de commander vos produits préférés. Alors n’attendez plus, recherchez tout de suite votre commerce favori et s'il ne s'y trouve pas, présentez lui Artisan Halles pour que ces clients se régalent.
+		Vous aimez bien manger, acheter des produits de qualité fabriqués par des artisans passionnés, faire vivre le terroir ? Ça tombe bien, nous aussi ! Artisan'Halles est une plateforme de vente pour tous les artisans du domaine alimentaire. En un clic, vous pourrez retrouver le commerçant de votre village ou de votre quartier afin de commander vos produits préférés. Alors n’attendez plus, recherchez tout de suite votre commerce favori et s'il ne s'y trouve pas, présentez lui Artisan'Halles pour que ces clients se régalent.
 
 
 	</p>
