--- a/templates/headers/header.html.twig
+++ b/templates/headers/header.html.twig
@@ -2,6 +2,9 @@
 <header class="masthead">
 	<div class="container">
 		<div class="masthead-subheading"></div>
-		<div class="masthead-heading text-uppercase">Artisan'Halles</div>
+		<div class="masthead-heading text-uppercase">
+			<h1>Artisan'Halles</h1>
+
+		</div>
 	</div>
 </header>
