suppression des fichiers de registrationtrader

--- a/templates/admin/admin_link_entity.html.twig
+++ b/templates/admin/admin_link_entity.html.twig
@@ -1,21 +1,28 @@
-<div class="row">
-	<ul class="list-group col-2 text-center">
-		<li class="list-group-item list-group-item-danger">
-			<a href="{{path('app_user_index')}}">Users</a>
-		</li>
-		<li class="list-group-item">
-			<a href="{{path('app_trader_index')}}">Traders</a>
-		</li>
-		<li class="list-group-item">
-			<a href="{{path('app_activitytype_index')}}">Types d'activités</a>
-		</li>
-		<li class="list-group-item">
-			<a href="{{path('app_categoryproduct_index')}}">Catégories de produit</a>
-		</li>
-		<li class="list-group-item">
-			<a href="{{path('app_product_index')}}">Produits</a>
-		</li>
-	</ul>
+<div class="mt-5">
+	<div class="row">
+		<div class="col-2 offset-1">
+			<h3 class="text-center">Les entités</h3>
+
+			<ul class="list-group text-center">
+
+				<li class="list-group-item">
+					<a href="{{path('app_user_index')}}">Users</a>
+				</li>
+				<li class="list-group-item">
+					<a href="{{path('app_trader_index')}}">Traders</a>
+				</li>
+				<li class="list-group-item">
+					<a href="{{path('app_activitytype_index')}}">Types d'activités</a>
+				</li>
+				<li class="list-group-item">
+					<a href="{{path('app_categoryproduct_index')}}">Catégories de produit</a>
+				</li>
+				<li class="list-group-item">
+					<a href="{{path('app_product_index')}}">Produits</a>
+				</li>
+			</ul>
+		</div>
 
 
+	</div>
 </div>
