--- a/templates/home/index_admin.html.twig
+++ b/templates/home/index_admin.html.twig
@@ -2,10 +2,10 @@
 
 {%block body%}
 
-<h2>Espace Admin</h2>
+<h2 class="text-center mt-5">Espace Admin</h2>
 
 
 <!-- liste des liens pour les entités -->
-{%include('admin_link_entity.html.twig')%}
+{%include('admin/admin_link_entity.html.twig')%}
 
-{%endbloc%}
+{%endblock%}
