formulaire d'inscription pour les traders fonctionne, ajout de roles par défault aux users et aux traders

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -33,14 +33,23 @@
 		<!--bloc navigation user -->
 		{% include('menus/navigation_user.html.twig') %}
 
-		<!--bloc header principal -->
-		{% include('headers/header.html.twig') %}
+		<!-- navigation trader -->
+		{% if is_granted('ROLE_TRADER') %}
 
-		{% block body %}{% endblock %}
 
-		<!--bloc footer -->
-		{% include('footers/footer.html.twig') %}
+			{% include('menus/navigation_trader.html.twig') %}
+			{%endif%}
 
-		 <script src="{{ asset('js/scripts.js') }}"></script>
+
+			<!--bloc header principal -->
+			{% include('headers/header.html.twig') %}
+
+			{% block body %}{% endblock %}
+
+			<!--bloc footer -->
+			{% include('footers/footer.html.twig') %}
+
+			 <script src="{{ asset('js/scripts.js') }}"></script>
+		</body>
 	</body>
 </html>
