--- a/templates/menus/navigation_tradder.html.twig
+++ b/templates/menus/navigation_tradder.html.twig
@@ -11,7 +11,7 @@
 					<a class="nav-link" href="{{path('app_home')}}">Accueil</a>
 				</li>
 
-				{%if not app.user%}
+				{%if not app.trader%}
 					<li class="nav-item">
 						<a class="nav-link" href="{{path('app_login')}}">Se connecter</a>
 					</li>
