--- a/templates/user/new.html.twig
+++ b/templates/user/new.html.twig
@@ -1,11 +1,12 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New User{% endblock %}
+{% block title %}New User
+{% endblock %}
 
 {% block body %}
-    <h1>Create new User</h1>
-
-    {{ include('user/_form.html.twig') }}
-
-    <a href="{{ path('app_user_index') }}">Retour à la liste</a>
+	<h1>Create new User</h1>
+	<div class="formulaire">
+		{{ include('user/_form.html.twig') }}
+	</div>
+	<a href="{{ path('app_user_index') }}">Retour à la liste</a>
 {% endblock %}
